python-compiler/tests/snapshots/lib__variables__assignment_with_arithmetic.snap
---
source: tests/variables.rs
assertion_line: 23
expression: llvm_ir
---
; ModuleID = 'main'
source_filename = "main"

@format_string = private unnamed_addr constant [4 x i8] c"%d\0A\00", align 1

define i32 @main() {
entry:
  %y = alloca i64, align 8
  %x = alloca i64, align 8
  store i64 10, ptr %x, align 4
  %x1 = load i64, ptr %x, align 4
  %addtmp = add i64 %x1, 5
  store i64 %addtmp, ptr %y, align 4
  %y2 = load i64, ptr %y, align 4
  %printf_call = call i32 (ptr, ...) @printf(ptr @format_string, i64 %y2)
  ret i32 0
}

declare i32 @printf(ptr, ...)
